--- a/index-bak.html
+++ b/index-bak.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-overtitle: 
-title:
-description:
+overtitle: Housed in the Center for Latin American and Iberian Research at UCSB
+title: The Archives, Memory, and Preservation Lab 
+description: AMPL develops tools and methodologies for achieving a more egalitarian archiving practice in Latin America and beyond.
 featured_image: /images/social.jpg
 ---
 
@@ -20,7 +20,8 @@ featured_image: /images/social.jpg
 			</div>
 
 			<p class="intro subtitle--light">
-				Housed in the <a href="https://clair.ucsb.edu" style="font-weight: 400">Center for Latin American and Iberian Research</a> at <span style="font-weight: 400">UC Santa Barbara</span>, the <span style="font-weight: 600">Archives, Memory, and Preservation Lab</span> develops tools and methodologies for achieving a more egalitarian archiving practice in Latin America and beyond.
+				{{ page.description }}
+				<a href="#" class="hero__cta button--fill contact-trigger js-contact">Get In Touch</a>
 			</p>
 		</div>
 	</section>
