--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 overtitle: 
-title:
-description:
+title: Welcome to AMPL
+description: 
 featured_image: /images/social.jpg
 ---
 
@@ -15,12 +15,14 @@ featured_image: /images/social.jpg
 	<section class="hero">
 		<div class="wrap grid">
 			<div class="title">
-				<p class="subtitle">{{ page.overtitle }}</p>
-				<h1>{{ page.title }}</h1>
+<!-- 				<h1 style="font-size: 40px">{{ page.title }}</h1>
+				<p class="subtitle">{{ page.overtitle }}</p> -->
 			</div>
-
 			<p class="intro subtitle--light">
-				Housed in the <a href="https://clair.ucsb.edu" style="font-weight: 400">Center for Latin American and Iberian Research</a> at <span style="font-weight: 400">UC Santa Barbara</span>, the <span style="font-weight: 600">Archives, Memory, and Preservation Lab</span> develops tools and methodologies for achieving a more egalitarian archiving practice in Latin America and beyond.
+				Welcome to the <span style="font-weight: 600">Archives, Memory, and Preservation Lab</span>, a laboratory for research and learning in the <a href="https://clair.ucsb.edu" style="font-weight: 400">Center for Latin American and Iberian Research</a> at the University of California, Santa Barbara.
+			<br>
+			<br>
+				<span style="font-weight: 600">AMPL</span> develops tools and methodologies for achieving a more egalitarian archiving practice in Latin America and beyond.
 			</p>
 		</div>
 	</section>
@@ -57,7 +59,7 @@ featured_image: /images/social.jpg
 
 	{% include section__about.html %}
 
-	<section class="recent-posts">
+<!-- 	<section class="recent-posts">
 		<div class="wrap grid">
 			<header class="recent-posts__header">
 				<h4>Recent blog posts</h4>
@@ -72,5 +74,5 @@ featured_image: /images/social.jpg
 
 			<a href="{{ '/blog' | relative_url }}" class="action-bottom button--text--accent --right">All Posts</a>
 		</div>
-	</section>
+	</section> -->
 </div>
