--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 overtitle: 
-title: Welcome to AMPL
+title: Projects
 description: 
 featured_image: /images/social.jpg
 ---
@@ -26,9 +26,9 @@ featured_image: /images/social.jpg
 			</p>
 		</div>
 	</section>
-
 	<section class="listing">
 		<div class="wrap">
+			<h1 style="padding-bottom: 50px">{{ page.title }}</h1>
 
 			{% for project in site.projects reversed %}
 
