--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ featured_image: /images/social.jpg
 					<p class="project__description --small">
 						{{ project.description }}
 						<a href="{{ project.url | relative_url }}" class="project__link button--text --right"
-							style="color: {{ accent_color }}; --color-var: {{ accent_color }}">View Case Study</a>
+							style="color: {{ accent_color }}; --color-var: {{ accent_color }}; border-bottom: none;">More details</a>
 					</p>
 				</div>
 			</article>
@@ -57,9 +57,9 @@ featured_image: /images/social.jpg
 		</div>
 	</section>
 
-	{% include section__about.html %}
+<!-- 	{% include section__about.html %} -->
 
-<!-- 	<section class="recent-posts">
+<section class="recent-posts">
 		<div class="wrap grid">
 			<header class="recent-posts__header">
 				<h4>Recent blog posts</h4>
@@ -74,5 +74,5 @@ featured_image: /images/social.jpg
 
 			<a href="{{ '/blog' | relative_url }}" class="action-bottom button--text--accent --right">All Posts</a>
 		</div>
-	</section> -->
+	</section>
 </div>
