Add short preset times to countdown timer

--- a/timer.html
+++ b/timer.html
@@ -450,6 +450,12 @@ featured_image: /images/social.jpg
     <!-- Duration mode -->
     <div class="setup-panel active" id="panel-duration">
       <div class="presets">
+        <button class="preset-btn" data-minutes="5">5 min</button>
+        <button class="preset-btn" data-minutes="15">15 min</button>
+        <button class="preset-btn" data-minutes="20">20 min</button>
+        <button class="preset-btn" data-minutes="30">30 min</button>
+      </div>
+      <div class="presets">
         <button class="preset-btn" data-minutes="50">50 min</button>
         <button class="preset-btn" data-minutes="75">1 hr 15</button>
         <button class="preset-btn" data-minutes="90">1 hr 30</button>
